added development file update

--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,7 @@
-zoomClientId=mbO3jvn4SJa6oARb8mv4YA
-zoomClientSecret=n74vI0qScxH9j3Va7UD1VbFp8RghgQdB
-zoomVerifyCode=nhL2o7XWSBCSXEYl-2FD2g
-zoomBotJid=v17tlwd2v3q5sipsv3na7obq@xmpp.zoom.us
-zoomRedirect_uri=https://9262-84-238-80-23.ngrok.io/auth
+zoomClientId=EYtCoQHVQLKOiJC9I4OfQ
+zoomClientSecret=QkBxXv9R06scxppmKQ7vYK71dmR6rX7w
+zoomVerifyCode=UGyS63kRRKii3zus8m3ewQ
+zoomBotJid=v1azbwt9kltbsdzaqvgkdywq@xmpp.zoom.us
+zoomRedirect_uri=http://multimodal.northeurope.cloudapp.azure.com/auth
 PORT=3000
 NAME=TEST
